# clawinterview

./: README.md  pyproject.toml
extensions/clawinterview/: index.ts
src/clawinterview/: __init__.py  __main__.py  brief.py  cli.py  compiler.py  conflict.py  engine.py  models.py  overlay.py  planner.py  resolver.py  schema.py  state.py
src/clawinterview/contracts/: onboarding.yaml
src/clawinterview/packs/: engineering.yaml  finance.yaml  marketing.yaml  operations.yaml  platform.yaml  product.yaml  programs.yaml  sales.yaml
src/clawinterview/resolvers/: __init__.py  ask.py  hyperspell_profile.py  infer.py  memory.py  pipeline_state.py  rag.py  tenant_file.py  upstream_output.py  user_args.py  user_message.py  web.py
tests/: conftest.py  test_brief.py  test_cli.py  test_compiler.py  test_conflict.py  test_contract_validation.py  test_engine.py  test_models.py  test_onboarding_contract.py  test_overlay.py  test_planner.py  test_resolver.py  test_schema.py  test_state.py
tests/fixtures/: department_pack.yaml  e2e_campaign_pipeline.yaml  e2e_campaign_strategist_contract.yaml  e2e_email_copywriter_contract.yaml  invalid_contract.yaml  pipeline_with_interview.yaml  tenant_overlay.yaml  valid_contract.yaml
